# drdemo

./: CREW_README.md  LICENSE  README.md  pyproject.toml
src/dreview/: crew.py  main.py
src/dreview/config/: agents.yaml  crew.yaml  tasks.yaml
