[project]
name = "dreview"
version = "0.1.0"
description = "dreview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
dreview = "dreview.main:run"
run_crew = "dreview.main:run"
train = "dreview.main:train"
replay = "dreview.main:replay"
test = "dreview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
